# agent-framework-graphrag-neo4j

./: .env.example  .gitignore  01_extract_contracts.py  02_build_graph.py  03_agent.py  AGENTS.md  LICENSE  README.md  devui.py  docker-compose.yml  pyproject.toml
contract_graphrag/: __init__.py  agent_config.py  contract_service.py  contract_tools.py  schema.py  settings.py  utils.py
cypher/: agreement_context_graph.cypher  drop_all_indexes.cypher  reset_database.cypher  view_graph_schema.cypher
prompts/: contract_extraction_prompt.txt
